--- a/analytics-service/Dockerfile.dev
+++ b/analytics-service/Dockerfile.dev
@@ -2,17 +2,17 @@ FROM node:18-alpine
 
 WORKDIR /app
 
+# Install tsx globally for TypeScript execution
+RUN npm install -g tsx
+
 # Copy package files
 COPY package.json package-lock.json* ./
 
-# Install dependencies
-RUN npm ci --omit=dev --legacy-peer-deps
+# Install all dependencies (including dev dependencies for development)
+RUN npm ci --legacy-peer-deps
 
 # Copy source code
 COPY . .
-
-# Build the application
-RUN npm run build
 
 # Create non-root user
 RUN addgroup -g 1001 -S nodejs
@@ -29,5 +29,5 @@ EXPOSE 3001
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
   CMD curl -f http://localhost:3001/health || exit 1
 
-# Start the service
-CMD ["npm", "start"]
+# Start the service in development mode
+CMD ["tsx", "src/index.ts"]
