--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "hono": "^4.7.8",
+    "ioredis": "^5.4.1",
     "ponder": "^0.9.14",
     "redis": "^5.5.6",
     "viem": "^2.29.0"
