feat: improve analytics service ETL

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@
 #PGADMIN_DEFAULT_PASSWORD=admin123
 #PGADMIN_CONFIG_SERVER_MODE=False
 
+# Redis Configuration
+REDIS_URL=redis://localhost:6379
+
 POOLMANAGER_CONTRACT_ADDRESS=
 BALANCEMANAGER_CONTRACT_ADDRESS=
 GTXROUTER_CONTRACT_ADDRESS=
