--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,26 @@
-version: "3.8"
 
 services:
-  postgres:
-    image: postgres:16
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    restart: always
+  ponder:
+    build: .
     env_file:
       - .env
-    ports:
-      - "54321:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-
-  # ponder:
-  #   build: .
-  #   env_file:
-  #     - .env
-  #   ports:
-  #     - "42069:42069"
-  #   depends_on:
-  #     - postgres
-  #   restart: always
-
-  pgadmin:
-    image: dpage/pgadmin4:latest
-    container_name: pgadmin4
-    restart: unless-stopped
-    env_file:
-      - .env
-    ports:
-      - "5050:80"
-    volumes:
-      - pgadmin_data:/var/lib/pgadmin
     depends_on:
-      - postgres
+      - redis
+    ports:
+      - "42069:42069"
+    restart: always
 
-volumes:
-  pgdata:
-  pgadmin_data:
+  api:
+    build: ./api
+    env_file:
+      - ./api/.env
+    ports:
+      - "3100:3000"
+    depends_on:
+      - ponder
+    restart: always
