feat: clean some unnecessary logs, add dedicated markets endpoint, and enhance faucet tokens data

--- a/.env.example
+++ b/.env.example
@@ -12,14 +12,29 @@
 # Redis Configuration
 REDIS_URL=redis://localhost:6379
 
-POOLMANAGER_CONTRACT_ADDRESS=
-BALANCEMANAGER_CONTRACT_ADDRESS=
-GTXROUTER_CONTRACT_ADDRESS=
+POOLMANAGER_CONTRACT_RARI_ADDRESS=
+BALANCEMANAGER_CONTRACT_RARI_ADDRESS=
+GTXROUTER_CONTRACT_RARI_ADDRESS=
 CHAIN_ID=11155931
 PONDER_RPC_URL=https://testnet.riselabs.xyz
 
-POLLING_INTERVAL=1000
-MAX_REQUESTS_PER_SECOND=25
+# Chain-specific polling intervals (milliseconds)
+RARI_POLLING_INTERVAL=2000
+APPCHAIN_POLLING_INTERVAL=5000  
+RISE_POLLING_INTERVAL=10000
+ARBITRUM_SEPOLIA_POLLING_INTERVAL=15000
+FAUCET_POLLING_INTERVAL=8000
+
+# Chain-specific request limits (requests per second)
+RARI_MAX_REQUESTS_PER_SECOND=15
+APPCHAIN_MAX_REQUESTS_PER_SECOND=8
+RISE_MAX_REQUESTS_PER_SECOND=5
+ARBITRUM_SEPOLIA_MAX_REQUESTS_PER_SECOND=3
+FAUCET_MAX_REQUESTS_PER_SECOND=6
+
+# Fallback defaults
+POLLING_INTERVAL=5000
+MAX_REQUESTS_PER_SECOND=10
 
 START_BLOCK=11799229
 
