feat: add market endpoints on api and create a performance tester

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,7 +1,18 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=password
-DB_NAME=gtx_api
-DB_SCHEMA=public
-# DB_CA_CERT_PATH=/path/to/ca-certificate.pem
+# =============================================================================
+# API CONFIGURATION
+# =============================================================================
+
+# Database Configuration
+DATABASE_URL=postgresql://username:password@localhost:5432/database_name
+DATABASE_CA=/path/to/ca-certificate.pem
+
+# Server Configuration
+PORT=3000
+NODE_ENV=development
+
+# CORS Configuration
+CORS_ORIGIN=*
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
