--- a/package.json
+++ b/package.json
@@ -19,7 +19,18 @@
     "ws-client": "tsx ./websocket-client/websocket-client.ts",
     "ws-stress-test": "tsx ./websocket-client/stress-test.ts",
     "simulate-market": "tsx ./scripts/simulate-market-data.ts",
-    "stream-monitor": "tsx ./cli/stream-monitor.ts"
+    "stream-monitor": "tsx ./cli/stream-monitor.ts",
+    "setup:anvil": "tsx ./scripts/setup-anvil.ts",
+    "dev:core-chain": "cp configurations/index.core-chain.ts src/index.ts && sed -i '' 's|../handlers/|./handlers/|g' src/index.ts && sed -i '' 's|../types/|./types/|g' src/index.ts && ponder dev --config ponder.config.core-chain.ts --port 42070",
+    "start:core-chain": "cp configurations/index.core-chain.ts src/index.ts && sed -i '' 's|../handlers/|./handlers/|g' src/index.ts && sed -i '' 's|../types/|./types/|g' src/index.ts && ponder start --config ponder.config.core-chain.ts --schema ponder.schema.ts --port 42070",
+    "db:core-chain": "cp configurations/index.core-chain.ts src/index.ts && sed -i '' 's|../handlers/|./handlers/|g' src/index.ts && sed -i '' 's|../types/|./types/|g' src/index.ts && ponder db --config ponder.config.core-chain.ts",
+    "codegen:core-chain": "cp configurations/index.core-chain.ts src/index.ts && sed -i '' 's|../handlers/|./handlers/|g' src/index.ts && sed -i '' 's|../types/|./types/|g' src/index.ts && ponder codegen --config ponder.config.core-chain.ts",
+    "dev:side-chain": "cp configurations/index.side-chain.ts src/index.ts && sed -i '' 's|../handlers/|./handlers/|g' src/index.ts && sed -i '' 's|../types/|./types/|g' src/index.ts && ponder dev --config ponder.config.side-chain.ts --port 42071",
+    "start:side-chain": "cp configurations/index.side-chain.ts src/index.ts && sed -i '' 's|../handlers/|./handlers/|g' src/index.ts && sed -i '' 's|../types/|./types/|g' src/index.ts && ponder start --config ponder.config.side-chain.ts --schema ponder.schema.ts --port 42071",
+    "db:side-chain": "cp configurations/index.side-chain.ts src/index.ts && sed -i '' 's|../handlers/|./handlers/|g' src/index.ts && sed -i '' 's|../types/|./types/|g' src/index.ts && ponder db --config ponder.config.side-chain.ts",
+    "codegen:side-chain": "cp configurations/index.side-chain.ts src/index.ts && sed -i '' 's|../handlers/|./handlers/|g' src/index.ts && sed -i '' 's|../types/|./types/|g' src/index.ts && ponder codegen --config ponder.config.side-chain.ts",
+    "dev:both-chains": "concurrently \"npm run dev:core-chain\" \"npm run dev:side-chain\"",
+    "start:both-chains": "concurrently \"npm run start:core-chain\" \"npm run start:side-chain\""
   },
   "dependencies": {
     "@types/ws": "^8.18.1",
