feat: add pm2 production deployment for websocket service

--- a/websocket-service/.env.example
+++ b/websocket-service/.env.example
@@ -1,26 +1,177 @@
-# WebSocket Service Configuration
+# =============================================================================
+# GTX WEBSOCKET SERVICE - ENVIRONMENT CONFIGURATION
+# =============================================================================
+# Copy this file to .env and update values for your environment
+
+# =============================================================================
+# SERVER CONFIGURATION
+# =============================================================================
+
+# WebSocket server ports (PM2 ecosystem uses these)
+WEBSOCKET_PORT=8080
+WEBSOCKET_SIDE_PORT=8081
+
+# Fallback port (used if WEBSOCKET_PORT not set)
 PORT=42080
+
+# Server host
 HOST=localhost
 
-# Redis Configuration
+# Node environment
+NODE_ENV=production
+
+# =============================================================================
+# CHAIN CONFIGURATION
+# =============================================================================
+
+# Default chain ID for this service instance
+# 31337 = Core chain (OrderBook, PoolManager, BalanceManager)
+# 31338 = Side chain (ChainBalanceManager, cross-chain operations)
+DEFAULT_CHAIN_ID=31337
+
+# =============================================================================
+# REDIS CONFIGURATION
+# =============================================================================
+
+# Redis connection URL for event streams
 REDIS_URL=redis://localhost:6380
 
-# Database Configuration (Read-only access)
-DATABASE_URL=postgresql://username:password@localhost:5432/ponder
+# Redis connection options (optional)
+REDIS_HOST=localhost
+REDIS_PORT=6380
+REDIS_PASSWORD=
+REDIS_DB=0
 
-# Service Configuration
-SERVICE_NAME=websocket-service
-LOG_LEVEL=info
+# =============================================================================
+# DATABASE CONFIGURATION
+# =============================================================================
 
-# Consumer Group Configuration
+# PostgreSQL connection for core chain
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=ponder_core
+DB_USER=postgres
+DB_PASSWORD=password
+
+# PostgreSQL connection string (alternative to individual settings)
+DATABASE_URL=postgresql://postgres:password@localhost:5432/ponder_core
+
+# Side chain database (if running side chain service)
+DB_NAME_SIDE=ponder_side
+
+# =============================================================================
+# EVENT CONSUMER CONFIGURATION
+# =============================================================================
+
+# Redis stream consumer settings (chain-specific)
 CONSUMER_GROUP=websocket-consumers
 CONSUMER_ID=ws-consumer-1
 
-# Batch Processing
+# Event processing batch size
 BATCH_SIZE=10
+
+# Stream polling interval (milliseconds)
 POLL_INTERVAL=1000
 
-# WebSocket Configuration
+# =============================================================================
+# WEBSOCKET SERVICE SETTINGS
+# =============================================================================
+
+# Service name for logging/monitoring
+SERVICE_NAME=websocket-service
+
+# Maximum number of concurrent WebSocket connections
+MAX_CONNECTIONS=1000
+
+# WebSocket heartbeat settings
 WS_PING_INTERVAL=30000
 WS_PONG_TIMEOUT=5000
-MAX_CONNECTIONS=1000
+
+# Connection timeout (milliseconds)
+CONNECTION_TIMEOUT=60000
+
+# Enable/disable WebSocket compression
+ENABLE_COMPRESSION=true
+
+# =============================================================================
+# LOGGING CONFIGURATION
+# =============================================================================
+
+# Log level (error, warn, info, debug, trace)
+LOG_LEVEL=info
+
+# Enable detailed request logging
+ENABLE_REQUEST_LOGGING=false
+
+# Log file paths (used by PM2)
+LOG_FILE=logs/combined.log
+ERROR_LOG_FILE=logs/error.log
+OUT_LOG_FILE=logs/out.log
+
+# =============================================================================
+# PERFORMANCE SETTINGS
+# =============================================================================
+
+# Maximum memory before restart (used by PM2)
+MAX_MEMORY_RESTART=512M
+
+# Number of PM2 instances (usually 1 for WebSocket services)
+PM2_INSTANCES=1
+
+# PM2 execution mode
+PM2_EXEC_MODE=fork
+
+# =============================================================================
+# SECURITY SETTINGS
+# =============================================================================
+
+# CORS origins (comma-separated)
+CORS_ORIGINS=http://localhost:3000,https://yourdomain.com
+
+# API rate limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=1000
+
+# JWT secret (if using authentication)
+JWT_SECRET=your-super-secret-jwt-key
+
+# =============================================================================
+# MONITORING & HEALTH CHECKS
+# =============================================================================
+
+# Health check endpoint enabled
+ENABLE_HEALTH_CHECK=true
+
+# Metrics collection enabled
+ENABLE_METRICS=true
+
+# Metrics port (if different from main port)
+METRICS_PORT=9090
+
+# =============================================================================
+# CHAIN-SPECIFIC OVERRIDES
+# =============================================================================
+
+# Core chain specific settings
+CORE_CHAIN_WEBSOCKET_PORT=8080
+CORE_CHAIN_DB_NAME=ponder_core
+CORE_CHAIN_REDIS_KEY_PREFIX=chain:31337
+
+# Side chain specific settings  
+SIDE_CHAIN_WEBSOCKET_PORT=8081
+SIDE_CHAIN_DB_NAME=ponder_side
+SIDE_CHAIN_REDIS_KEY_PREFIX=chain:31338
+
+# =============================================================================
+# DEPLOYMENT CONFIGURATION
+# =============================================================================
+
+# Server timezone
+TZ=UTC
+
+# Process title for monitoring
+PROCESS_TITLE=gtx-websocket-service
+
+# Deployment environment identifier
+DEPLOYMENT_ENV=production
+DEPLOYMENT_VERSION=1.0.0
