--- a/websocket-service/package.json
+++ b/websocket-service/package.json
@@ -7,7 +7,24 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "pm2:prod": "npm run build && pm2 start ecosystem.config.js --env production",
+    "pm2:dev": "pm2 start ecosystem.config.js --env development",
+    "pm2:core": "npm run build && pm2 start ecosystem.config.js --only gtx-websocket --env production",
+    "pm2:side": "npm run build && pm2 start ecosystem.config.js --only gtx-websocket-side --env production",
+    "pm2:both": "npm run build && pm2 start ecosystem.config.js --env production",
+    "pm2:core:port": "npm run build && WEBSOCKET_PORT=$WEBSOCKET_PORT pm2 start ecosystem.config.js --only gtx-websocket --env production",
+    "pm2:side:port": "npm run build && WEBSOCKET_SIDE_PORT=$WEBSOCKET_SIDE_PORT pm2 start ecosystem.config.js --only gtx-websocket-side --env production",
+    "pm2:both:ports": "npm run build && WEBSOCKET_PORT=$WEBSOCKET_PORT WEBSOCKET_SIDE_PORT=$WEBSOCKET_SIDE_PORT pm2 start ecosystem.config.js --env production",
+    "pm2:stop": "pm2 stop gtx-websocket",
+    "pm2:stop:all": "pm2 stop gtx-websocket gtx-websocket-side",
+    "pm2:restart": "pm2 restart gtx-websocket",
+    "pm2:restart:all": "pm2 restart gtx-websocket gtx-websocket-side",
+    "pm2:delete": "pm2 delete gtx-websocket",
+    "pm2:delete:all": "pm2 delete gtx-websocket gtx-websocket-side",
+    "pm2:logs": "pm2 logs gtx-websocket",
+    "pm2:logs:all": "pm2 logs gtx-websocket gtx-websocket-side",
+    "pm2:monit": "pm2 monit"
   },
   "dependencies": {
     "ws": "^8.14.2",
