--- a/.env.core-chain
+++ b/.env.core-chain
@@ -33,40 +33,41 @@ MAX_REQUESTS_PER_SECOND=100
 
 # GTX Anvil (Main Chain - 31337)
 CHAIN_ID=31337
-PONDER_RPC_URL=https://anvil.gtxdex.xyz
-GTX_ANVIL_ENDPOINT=https://anvil.gtxdex.xyz
+PONDER_RPC_URL=https://core-devnet.gtxdex.xyz
+CORE_DEVNET_ENDPOINT=https://core-devnet.gtxdex.xyz
 
 # =============================================================================
 # CONTRACT ADDRESSES - CORE CHAIN (GTX-ANVIL - 31337) ONLY
 # =============================================================================
 
 # Core Trading Contracts
-GTXROUTER_CONTRACT_GTX_ANVIL_ADDRESS=0xb7278A61aa25c888815aFC32Ad3cC52fF24fE575
-BALANCEMANAGER_CONTRACT_GTX_ANVIL_ADDRESS=0x8f86403A4DE0BB5791fa46B8e795C547942fE4Cf
-POOLMANAGER_CONTRACT_GTX_ANVIL_ADDRESS=0x1291Be112d480055DaFd8a610b7d1e203891C274
-CHAINREGISTRY_CONTRACT_GTX_ANVIL_ADDRESS=0x99bbA657f2BbC93c02D617f8bA121cB8Fc104Acf
-TOKENREGISTRY_CONTRACT_GTX_ANVIL_ADDRESS=0x70e0bA845a1A0F2DA3359C97E0285013525FFC49
-SYNTHETICTOKENFACTORY_CONTRACT_GTX_ANVIL_ADDRESS=0x5eb3Bc0a489C5A8288765d2336659EbCA68FCd00
+GTXROUTER_CONTRACT_GTX_ANVIL_ADDRESS=0x367761085BF3C12e5DA2Df99AC6E1a824612b8fb
+BALANCEMANAGER_CONTRACT_GTX_ANVIL_ADDRESS=0x4EE6eCAD1c2Dae9f525404De8555724e3c35d07B
+POOLMANAGER_CONTRACT_GTX_ANVIL_ADDRESS=0xC9a43158891282A2B1475592D5719c001986Aaec
+CHAINREGISTRY_CONTRACT_GTX_ANVIL_ADDRESS=0xf4B146FbA71F41E0592668ffbF264F1D186b2Ca8
+TOKENREGISTRY_CONTRACT_GTX_ANVIL_ADDRESS=0x0355B7B8cb128fA5692729Ab3AAa199C1753f726
+SYNTHETICTOKENFACTORY_CONTRACT_GTX_ANVIL_ADDRESS=0xD84379CEae14AA33C123Af12424A37803F885889
 
 # OrderBook Contracts
-ORDERBOOK_CONTRACT_GTX_ANVIL_ADDRESS=0x809d550fca64d94Bd9F66E60752A544199cfAC3D
-ORDERBOOK_IMPL_CONTRACT_GTX_ANVIL_ADDRESS=0x36C02dA8a0983159322a80FFE9F24b1acfF8B570
+ORDERBOOK_CONTRACT_GTX_ANVIL_ADDRESS=0xfbC22278A96299D91d41C453234d97b4F5Eb9B2d
+ORDERBOOK_IMPL_CONTRACT_GTX_ANVIL_ADDRESS=0x2B0d36FACD61B71CC05ab8F3D2355ec3631C0dd5
 
 # Token Contracts (Core Chain)
-USDC_CONTRACT_GTX_ANVIL_ADDRESS=0xcbEAF3BDe82155F56486Fb5a1072cb8baAf547cc
-WBTC_CONTRACT_GTX_ANVIL_ADDRESS=0xB0D4afd8879eD9F52b28595d31B441D079B2Ca07
-WETH_CONTRACT_GTX_ANVIL_ADDRESS=0x1429859428C0aBc9C2C47C8Ee9FBaf82cFA0F20f
+USDC_CONTRACT_GTX_ANVIL_ADDRESS=0xAA292E8611aDF267e563f334Ee42320aC96D0463
+WBTC_CONTRACT_GTX_ANVIL_ADDRESS=0x720472c8ce72c2A2D711333e064ABD3E6BbEAdd3
+WETH_CONTRACT_GTX_ANVIL_ADDRESS=0x5c74c94173F05dA1720953407cbb920F3DF9f887
 
 # Synthetic Token Contracts (Core Chain)
-GSUSDC_CONTRACT_GTX_ANVIL_ADDRESS=0xc95ff0608561b6bA084c78D14f09e9826190f968
-GSWBTC_CONTRACT_GTX_ANVIL_ADDRESS=0xB01718DCF2124e3a9217aC0dEc176a72733d2589
-GSWETH_CONTRACT_GTX_ANVIL_ADDRESS=0xbD89b434dD59562756ED9B14B0bec5E71f3c6876
+GSUSDC_CONTRACT_GTX_ANVIL_ADDRESS=0x33beA8c72E8b678B0B2b66D1768b8ed1B42e79bD
+GSWBTC_CONTRACT_GTX_ANVIL_ADDRESS=0x9adf2D7a5851Af6817Fd02Baa8B7548e15dca1b4
+GSWETH_CONTRACT_GTX_ANVIL_ADDRESS=0xa650eC49e73872336A37A4c356ABc82c9055Cb0e
 
-# Faucet Contract
-FAUCET_GTX_ANVIL_ADDRESS=0x6EDA4e0525C8c9803a5b8D2f16654ac1795818c5
+# Faucet Contract (Core Chain - No faucet deployed on chain 31337)
+# FAUCET_GTX_ANVIL_ADDRESS=
+# FAUCET_BEACON_GTX_ANVIL_ADDRESS=
 
 # Hyperlane Mailbox (Core Chain)
-MAILBOX_GTX_ANVIL_ADDRESS=0xe844dF90c946CecD08076D129E14a3bc04C9f5d5
+MAILBOX_GTX_ANVIL_ADDRESS=0x8A791620dd6260079BF849Dc5567aDC3F2FdC318
 
 # =============================================================================
 # START BLOCKS - CORE ANVIL NETWORK
