--- a/.env.side-chain
+++ b/.env.side-chain
@@ -29,26 +29,27 @@ MAX_REQUESTS_PER_SECOND=50
 # =============================================================================
 
 # GTX Anvil 2 (Side Chain - 31338)
-GTX_ANVIL_2_ENDPOINT=https://side-anvil.gtxdex.xyz
+SIDE_DEVNET_ENDPOINT=https://side-devnet.gtxdex.xyz
 
 # =============================================================================
 # CONTRACT ADDRESSES - SIDE CHAIN (GTX-ANVIL-2 - 31338) ONLY
 # =============================================================================
 
 # Chain Balance Manager (Primary contract on side chain)
-CHAIN_BALANCE_MANAGER_GTX_ANVIL_2_ADDRESS=0x4ed7c70F96B99c776995fB64377f0d4aB3B0e1C1
-CHAIN_BALANCE_MANAGER_IMPL_GTX_ANVIL_2_ADDRESS=0x59b670e9fA9D0A427751Af201D676719a970857b
+CHAIN_BALANCE_MANAGER_GTX_ANVIL_2_ADDRESS=0xc5a5C42992dECbae36851359345FE25997F5C42d
+CHAIN_BALANCE_MANAGER_IMPL_GTX_ANVIL_2_ADDRESS=0x09635F643e140090A9A8Dcd712eD6285858ceBef
 
 # Token Contracts (Side Chain)
-USDC_CONTRACT_GTX_ANVIL_2_ADDRESS=0x68B1D87F95878fE05B998F19b66F4baba5De1aed
-WBTC_CONTRACT_GTX_ANVIL_2_ADDRESS=0xc6e7DF5E7b4f2A278906862b61205850344D4e7d
-WETH_CONTRACT_GTX_ANVIL_2_ADDRESS=0x3Aa5ebB10DC797CAC828524e59A333d0A371443c
+USDC_CONTRACT_GTX_ANVIL_2_ADDRESS=0xa85233C63b9Ee964Add6F2cffe00Fd84eb32338f
+WBTC_CONTRACT_GTX_ANVIL_2_ADDRESS=0x7a2088a1bFc9d81c55368AE168C2C02570cB814F
+WETH_CONTRACT_GTX_ANVIL_2_ADDRESS=0x4A679253410272dd5232B3Ff7cF5dbB88f295319
 
 # Faucet Contract (Side Chain)
-FAUCET_GTX_ANVIL_2_ADDRESS=0x6EDA4e0525C8c9803a5b8D2f16654ac1795818c5
+FAUCET_GTX_ANVIL_2_ADDRESS=0xc3e53F4d16Ae77Db1c982e75a937B9f60FE63690
+FAUCET_BEACON_GTX_ANVIL_2_ADDRESS=0xE6E340D132b5f46d1e472DebcD681B2aBc16e57E
 
 # Hyperlane Mailbox (Side Chain)
-MAILBOX_GTX_ANVIL_2_ADDRESS=0xB06c856C8eaBd1d8321b687E188204C1018BC4E5
+MAILBOX_GTX_ANVIL_2_ADDRESS=0x8A791620dd6260079BF849Dc5567aDC3F2FdC318
 
 # =============================================================================
 # START BLOCKS - SIDE ANVIL NETWORK
