--- a/.env.core-chain
+++ b/.env.core-chain
@@ -1,5 +1,5 @@
 # =============================================================================
-# PONDER CONFIGURATION - CORE ANVIL ENVIRONMENT (GTX-ANVIL/31337)
+# PONDER CONFIGURATION - CORE CORE_DEVNET ENVIRONMENT (GTX-CORE_DEVNET/31337)
 # =============================================================================
 
 # Database Configuration - Core Chain Database
@@ -16,11 +16,11 @@ REDIS_URL=redis://localhost:6380
 # =============================================================================
 
 # Core chain polling (optimized for high-frequency trading operations)
-GTX_ANVIL_POLLING_INTERVAL=500
+GTX_CORE_DEVNET_POLLING_INTERVAL=500
 FAUCET_POLLING_INTERVAL=2000
 
 # Core chain request limits (higher for main trading operations)
-GTX_ANVIL_MAX_REQUESTS_PER_SECOND=100
+GTX_CORE_DEVNET_MAX_REQUESTS_PER_SECOND=100
 FAUCET_MAX_REQUESTS_PER_SECOND=25
 
 # Fallback defaults
@@ -28,7 +28,7 @@ POLLING_INTERVAL=500
 MAX_REQUESTS_PER_SECOND=100
 
 # =============================================================================
-# CHAIN ENDPOINTS - CORE ANVIL NETWORK ONLY
+# CHAIN ENDPOINTS - CORE CORE_DEVNET NETWORK ONLY
 # =============================================================================
 
 # GTX Anvil (Main Chain - 31337)
@@ -37,46 +37,46 @@ PONDER_RPC_URL=https://core-devnet.gtxdex.xyz
 CORE_DEVNET_ENDPOINT=https://core-devnet.gtxdex.xyz
 
 # =============================================================================
-# CONTRACT ADDRESSES - CORE CHAIN (GTX-ANVIL - 31337) ONLY
+# CONTRACT ADDRESSES - CORE CHAIN (GTX-CORE_DEVNET - 31337) ONLY
 # =============================================================================
 
 # Core Trading Contracts
-GTXROUTER_CONTRACT_GTX_ANVIL_ADDRESS=0x367761085BF3C12e5DA2Df99AC6E1a824612b8fb
-BALANCEMANAGER_CONTRACT_GTX_ANVIL_ADDRESS=0x4EE6eCAD1c2Dae9f525404De8555724e3c35d07B
-POOLMANAGER_CONTRACT_GTX_ANVIL_ADDRESS=0xC9a43158891282A2B1475592D5719c001986Aaec
-CHAINREGISTRY_CONTRACT_GTX_ANVIL_ADDRESS=0xf4B146FbA71F41E0592668ffbF264F1D186b2Ca8
-TOKENREGISTRY_CONTRACT_GTX_ANVIL_ADDRESS=0x0355B7B8cb128fA5692729Ab3AAa199C1753f726
-SYNTHETICTOKENFACTORY_CONTRACT_GTX_ANVIL_ADDRESS=0xD84379CEae14AA33C123Af12424A37803F885889
+GTXROUTER_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x4f1F87d512650f32bf9949C4c5Ef37a3cc891C6D
+BALANCEMANAGER_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x4Dd5336F3C0D70893A7a86c6aEBe9B953E87c891
+POOLMANAGER_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x6fFa22292b86D678fF6621eEdC9B15e68dC44DcD
+CHAINREGISTRY_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0xf4B146FbA71F41E0592668ffbF264F1D186b2Ca8
+TOKENREGISTRY_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x0355B7B8cb128fA5692729Ab3AAa199C1753f726
+SYNTHETICTOKENFACTORY_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0xD84379CEae14AA33C123Af12424A37803F885889
 
 # OrderBook Contracts
-ORDERBOOK_CONTRACT_GTX_ANVIL_ADDRESS=0xfbC22278A96299D91d41C453234d97b4F5Eb9B2d
-ORDERBOOK_IMPL_CONTRACT_GTX_ANVIL_ADDRESS=0x2B0d36FACD61B71CC05ab8F3D2355ec3631C0dd5
+ORDERBOOK_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0xfbC22278A96299D91d41C453234d97b4F5Eb9B2d
+ORDERBOOK_IMPL_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x2B0d36FACD61B71CC05ab8F3D2355ec3631C0dd5
 
 # Token Contracts (Core Chain)
-USDC_CONTRACT_GTX_ANVIL_ADDRESS=0xAA292E8611aDF267e563f334Ee42320aC96D0463
-WBTC_CONTRACT_GTX_ANVIL_ADDRESS=0x720472c8ce72c2A2D711333e064ABD3E6BbEAdd3
-WETH_CONTRACT_GTX_ANVIL_ADDRESS=0x5c74c94173F05dA1720953407cbb920F3DF9f887
+USDC_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x7A5EC257391817ef241ef8451642cC6b222d4f8C
+WBTC_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x59c7D03d2E9893FB7bAa89dA50a9452e1e9B8b90
+WETH_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x90E75f390332356426B60FB440DF23f860F6A113
 
 # Synthetic Token Contracts (Core Chain)
-GSUSDC_CONTRACT_GTX_ANVIL_ADDRESS=0x33beA8c72E8b678B0B2b66D1768b8ed1B42e79bD
-GSWBTC_CONTRACT_GTX_ANVIL_ADDRESS=0x9adf2D7a5851Af6817Fd02Baa8B7548e15dca1b4
-GSWETH_CONTRACT_GTX_ANVIL_ADDRESS=0xa650eC49e73872336A37A4c356ABc82c9055Cb0e
+GSUSDC_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x75c902863A9531385FB9F7dBb4b8C929eF8850c8
+GSWBTC_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x0356B6F5b96a7b99553496570f3D496b6a92224e
+GSWETH_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x49A524f4a1d999db12546834e227bD1cC720BFE0
 
 # Faucet Contract (Core Chain - No faucet deployed on chain 31337)
-# FAUCET_GTX_ANVIL_ADDRESS=
-# FAUCET_BEACON_GTX_ANVIL_ADDRESS=
+# FAUCET_GTX_CORE_DEVNET_ADDRESS=
+# FAUCET_BEACON_GTX_CORE_DEVNET_ADDRESS=
 
 # Hyperlane Mailbox (Core Chain)
-MAILBOX_GTX_ANVIL_ADDRESS=0x8A791620dd6260079BF849Dc5567aDC3F2FdC318
+MAILBOX_GTX_CORE_DEVNET_ADDRESS=0x8A791620dd6260079BF849Dc5567aDC3F2FdC318
 
 # =============================================================================
-# START BLOCKS - CORE ANVIL NETWORK
+# START BLOCKS - CORE CORE_DEVNET NETWORK
 # =============================================================================
 
-# Start from block 0 for fresh anvil deployments
-START_BLOCK=0
-GTX_ANVIL_START_BLOCK=0
-FAUCET_START_BLOCK=0
+# Start from block where contracts were deployed
+START_BLOCK=100
+GTX_CORE_DEVNET_START_BLOCK=100
+FAUCET_START_BLOCK=100
 
 # =============================================================================
 # WEBSOCKET CONFIGURATION - CORE CHAIN
@@ -92,7 +92,7 @@ RECONNECT_INTERVAL=3000
 AUTO_RECONNECT=true
 
 # =============================================================================
-# APPLICATION SETTINGS - CORE ANVIL ENVIRONMENT
+# APPLICATION SETTINGS - CORE CORE_DEVNET ENVIRONMENT
 # =============================================================================
 
 NETWORK=core-anvil
@@ -105,8 +105,8 @@ CLOB_DEX_PATH=/Users/renaka/gtx/clob-dex
 # =============================================================================
 
 # Chain Information
-GTX_ANVIL_CHAIN_ID=31337
-GTX_ANVIL_NETWORK_NAME=GTX Core Anvil
+GTX_CORE_DEVNET_CHAIN_ID=31337
+GTX_CORE_DEVNET_NETWORK_NAME=GTX Core Anvil
 
 # Deployment Environment
 DEPLOYMENT_ENV=local
@@ -130,10 +130,10 @@ METRICS_PORT=9090
 # =============================================================================
 
 # Block confirmation requirements
-GTX_ANVIL_CONFIRMATIONS=1
+GTX_CORE_DEVNET_CONFIRMATIONS=1
 
 # Transaction timeout settings (milliseconds)
-GTX_ANVIL_TIMEOUT=30000
+GTX_CORE_DEVNET_TIMEOUT=30000
 
 # Retry configurations
 MAX_RETRIES=3
@@ -144,7 +144,7 @@ RETRY_DELAY=1000
 # =============================================================================
 
 # Batch processing sizes
-GTX_ANVIL_BATCH_SIZE=100
+GTX_CORE_DEVNET_BATCH_SIZE=100
 
 # Event processing
 PROCESS_HISTORICAL_EVENTS=true
