--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "db:side-chain": "rm -f src/index.ts && cp configurations/index.side-chain.ts src/index.ts && (sed -i '' 's|../handlers/|./handlers/|g' src/index.ts 2>/dev/null || sed -i 's|../handlers/|./handlers/|g' src/index.ts) && (sed -i '' 's|../types/|./types/|g' src/index.ts 2>/dev/null || sed -i 's|../types/|./types/|g' src/index.ts) && ponder db --config ponder.config.side-chain.ts",
     "codegen:side-chain": "rm -f src/index.ts && cp configurations/index.side-chain.ts src/index.ts && (sed -i '' 's|../handlers/|./handlers/|g' src/index.ts 2>/dev/null || sed -i 's|../handlers/|./handlers/|g' src/index.ts) && (sed -i '' 's|../types/|./types/|g' src/index.ts 2>/dev/null || sed -i 's|../types/|./types/|g' src/index.ts) && ponder codegen --config ponder.config.side-chain.ts",
     "dev:both-chains": "concurrently \"npm run dev:core-chain\" \"npm run dev:side-chain\"",
-    "start:both-chains": "concurrently \"npm run start:core-chain\" \"npm run start:side-chain\""
+    "start:both-chains": "concurrently \"npm run start:core-chain\" \"npm run start:side-chain\"",
+    "db:drop-core": "tsx scripts/drop-db.ts core",
+    "db:drop-side": "tsx scripts/drop-db.ts side",
+    "db:drop-both": "tsx scripts/drop-db.ts both"
   },
   "dependencies": {
     "@types/ws": "^8.18.1",
