feat: update default chain to use gtx devnet, remove debugging code, and update pools contract deployment

--- a/.env.espresso
+++ b/.env.espresso
@@ -91,7 +91,7 @@ ARBITRUM_SEPOLIA_START_BLOCK=186406653
 ENABLE_WEBSOCKET=true
 ENABLE_WEBSOCKET_LOG=true
 ENABLE_EVENT_PUBLISHING=true
-WEBSOCKET_URL=ws://localhost:42080
+WEBSOCKET_URL=wss://core-devnet.gtxdex.xyz
 START_WEBSOCKET_BLOCK=12731592
 PING_INTERVAL=30000
 RECONNECT_INTERVAL=3000
