--- a/websocket-client/.env.example
+++ b/websocket-client/.env.example
@@ -1,4 +1,4 @@
-WEBSOCKET_URL=ws://localhost:42080
+WEBSOCKET_URL=wss://core-devnet.gtxdex.xyz
 PING_INTERVAL=30000
 RECONNECT_INTERVAL=3000
 AUTO_RECONNECT=true
