--- a/.env.core-chain
+++ b/.env.core-chain
@@ -85,7 +85,7 @@ FAUCET_START_BLOCK=100
 ENABLE_WEBSOCKET=true
 ENABLE_WEBSOCKET_LOG=true
 ENABLE_EVENT_PUBLISHING=true
-WEBSOCKET_URL=ws://localhost:42080
+WEBSOCKET_URL=wss://core-devnet.gtxdex.xyz
 START_WEBSOCKET_BLOCK=0
 PING_INTERVAL=30000
 RECONNECT_INTERVAL=3000
