feat: add static token data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      - PONDER_DATABASE_URL=postgresql://postgres:password@postgres:5432/ponder
+      - PONDER_DATABASE_URL=postgresql://postgres:password@postgres:5432/ponder_core
       - REDIS_URL=redis://redis:6379
       - ENABLE_EVENT_PUBLISHING=true
       - ENABLE_WEBSOCKET=false  # Disabled in favor of separate websocket service
@@ -31,7 +31,7 @@ services:
       - PORT=42080
       - HEALTH_PORT=8080
       - REDIS_URL=redis://redis:6379
-      - DATABASE_URL=postgresql://postgres:password@postgres:5432/ponder
+      - DATABASE_URL=postgresql://postgres:password@postgres:5432/ponder_core
       - CONSUMER_GROUP=websocket-consumers
       - CONSUMER_ID=ws-consumer-1
       - BATCH_SIZE=10
@@ -55,7 +55,7 @@ services:
     environment:
       - PORT=42090
       - REDIS_URL=redis://redis:6379
-      - DATABASE_URL=postgresql://postgres:password@postgres:5432/ponder
+      - DATABASE_URL=postgresql://postgres:password@postgres:5432/ponder_core
       - TIMESCALE_DATABASE_URL=postgresql://postgres:password@timescaledb:5432/analytics
       - CONSUMER_GROUP=analytics-consumers
       - CONSUMER_ID=analytics-consumer-1
@@ -77,14 +77,13 @@ services:
   postgres:
     image: postgres:15-alpine
     environment:
-      - POSTGRES_DB=ponder
+      - POSTGRES_DB=ponder_core
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
     ports:
       - "5433:5432"  # Use port 5433 externally to avoid conflict
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./scripts/init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     networks:
       - gtx-network
     restart: unless-stopped
