feat: update deployment data

--- a/.env.core-chain
+++ b/.env.core-chain
@@ -15,17 +15,17 @@ REDIS_URL=redis://localhost:6380
 # NETWORK PERFORMANCE SETTINGS - CORE CHAIN OPTIMIZED
 # =============================================================================
 
-# Core chain polling (optimized for high-frequency trading operations)
-GTX_CORE_DEVNET_POLLING_INTERVAL=500
-FAUCET_POLLING_INTERVAL=2000
+# Core chain polling (reduced to avoid RPC overload)
+GTX_CORE_DEVNET_POLLING_INTERVAL=2000
+FAUCET_POLLING_INTERVAL=5000
 
-# Core chain request limits (higher for main trading operations)
-GTX_CORE_DEVNET_MAX_REQUESTS_PER_SECOND=100
-FAUCET_MAX_REQUESTS_PER_SECOND=25
+# Core chain request limits (reduced to avoid RPC overload)
+GTX_CORE_DEVNET_MAX_REQUESTS_PER_SECOND=10
+FAUCET_MAX_REQUESTS_PER_SECOND=5
 
 # Fallback defaults
-POLLING_INTERVAL=500
-MAX_REQUESTS_PER_SECOND=100
+POLLING_INTERVAL=1000
+MAX_REQUESTS_PER_SECOND=10
 
 # =============================================================================
 # CHAIN ENDPOINTS - CORE CORE_DEVNET NETWORK ONLY
@@ -41,26 +41,26 @@ CORE_DEVNET_ENDPOINT=https://core-devnet.gtxdex.xyz
 # =============================================================================
 
 # Core Trading Contracts
-GTXROUTER_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x4f1F87d512650f32bf9949C4c5Ef37a3cc891C6D
-BALANCEMANAGER_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x4Dd5336F3C0D70893A7a86c6aEBe9B953E87c891
-POOLMANAGER_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x6fFa22292b86D678fF6621eEdC9B15e68dC44DcD
-CHAINREGISTRY_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0xf4B146FbA71F41E0592668ffbF264F1D186b2Ca8
-TOKENREGISTRY_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x0355B7B8cb128fA5692729Ab3AAa199C1753f726
-SYNTHETICTOKENFACTORY_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0xD84379CEae14AA33C123Af12424A37803F885889
+GTXROUTER_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x0DCd1Bf9A1b36cE34237eEaFef220932846BCD82
+BALANCEMANAGER_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x5FC8d32690cc91D4c39d9d3abcBD16989F875707
+POOLMANAGER_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0xB7f8BC63BbcaD18155201308C8f3540b07f84F5e
+CHAINREGISTRY_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9
+TOKENREGISTRY_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
+SYNTHETICTOKENFACTORY_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0xa513E6E4b8f2a923D98304ec87F64353C4D5C853
 
 # OrderBook Contracts
-ORDERBOOK_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0xfbC22278A96299D91d41C453234d97b4F5Eb9B2d
-ORDERBOOK_IMPL_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x2B0d36FACD61B71CC05ab8F3D2355ec3631C0dd5
+ORDERBOOK_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x8A791620dd6260079BF849Dc5567aDC3F2FdC318
+ORDERBOOK_IMPL_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x2279B7A0a67DB372996a5FaB50D91eAA73d2eBe6
 
 # Token Contracts (Core Chain)
-USDC_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x7A5EC257391817ef241ef8451642cC6b222d4f8C
-WBTC_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x59c7D03d2E9893FB7bAa89dA50a9452e1e9B8b90
-WETH_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x90E75f390332356426B60FB440DF23f860F6A113
+USDC_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x59b670e9fA9D0A427751Af201D676719a970857b
+WBTC_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x322813Fd9A801c5507c9de605d63CEA4f2CE6c44
+WETH_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x4ed7c70F96B99c776995fB64377f0d4aB3B0e1C1
 
 # Synthetic Token Contracts (Core Chain)
-GSUSDC_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x75c902863A9531385FB9F7dBb4b8C929eF8850c8
-GSWBTC_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x0356B6F5b96a7b99553496570f3D496b6a92224e
-GSWETH_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x49A524f4a1d999db12546834e227bD1cC720BFE0
+GSUSDC_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x9bd03768a7DCc129555dE410FF8E85528A4F88b5
+GSWBTC_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x80E2E2367C5E9D070Ae2d6d50bF0cdF6360a7151
+GSWETH_CONTRACT_GTX_CORE_DEVNET_ADDRESS=0x440C0fCDC317D69606eabc35C0F676D1a8251Ee1
 
 # Faucet Contract (Core Chain - No faucet deployed on chain 31337)
 # FAUCET_GTX_CORE_DEVNET_ADDRESS=
@@ -74,9 +74,9 @@ MAILBOX_GTX_CORE_DEVNET_ADDRESS=0x8A791620dd6260079BF849Dc5567aDC3F2FdC318
 # =============================================================================
 
 # Start from block where contracts were deployed
-START_BLOCK=100
-GTX_CORE_DEVNET_START_BLOCK=100
-FAUCET_START_BLOCK=100
+START_BLOCK=0
+GTX_CORE_DEVNET_START_BLOCK=0
+FAUCET_START_BLOCK=0
 
 # =============================================================================
 # WEBSOCKET CONFIGURATION - CORE CHAIN
