--- a/.env.side-chain
+++ b/.env.side-chain
@@ -36,13 +36,13 @@ SIDE_DEVNET_ENDPOINT=https://side-devnet.gtxdex.xyz
 # =============================================================================
 
 # Chain Balance Manager (Primary contract on side chain)
-CHAIN_BALANCE_MANAGER_GTX_SIDE_DEVNET_ADDRESS=0x1343248Cbd4e291C6979e70a138f4c774e902561
-CHAIN_BALANCE_MANAGER_IMPL_GTX_SIDE_DEVNET_ADDRESS=0x3C1Cb427D20F15563aDa8C249E71db76d7183B6c
+CHAIN_BALANCE_MANAGER_GTX_SIDE_DEVNET_ADDRESS=0xcbEAF3BDe82155F56486Fb5a1072cb8baAf547cc
+CHAIN_BALANCE_MANAGER_IMPL_GTX_SIDE_DEVNET_ADDRESS=0xFD471836031dc5108809D173A067e8486B9047A3
 
 # Token Contracts (Side Chain)
-USDC_CONTRACT_GTX_SIDE_DEVNET_ADDRESS=0x193521C8934bCF3473453AF4321911E7A89E0E12
-WBTC_CONTRACT_GTX_SIDE_DEVNET_ADDRESS=0x01E21d7B8c39dc4C764c19b308Bd8b14B1ba139E
-WETH_CONTRACT_GTX_SIDE_DEVNET_ADDRESS=0x9Fcca440F19c62CDF7f973eB6DDF218B15d4C71D
+USDC_CONTRACT_GTX_SIDE_DEVNET_ADDRESS=0x8198f5d8F8CfFE8f9C413d98a0A55aEB8ab9FbB7
+WBTC_CONTRACT_GTX_SIDE_DEVNET_ADDRESS=0x202CCe504e04bEd6fC0521238dDf04Bc9E8E15aB
+WETH_CONTRACT_GTX_SIDE_DEVNET_ADDRESS=0x0355B7B8cb128fA5692729Ab3AAa199C1753f726
 
 # Faucet Contract (Side Chain)
 FAUCET_GTX_SIDE_DEVNET_ADDRESS=0xc3e53F4d16Ae77Db1c982e75a937B9f60FE63690
@@ -55,7 +55,7 @@ MAILBOX_GTX_SIDE_DEVNET_ADDRESS=0x8A791620dd6260079BF849Dc5567aDC3F2FdC318
 # START BLOCKS - SIDE ANVIL NETWORK
 # =============================================================================
 
-# Start from block 0 for fresh anvil deployments
+# Start from current block to avoid reorg issues
 START_BLOCK=0
 GTX_SIDE_DEVNET_START_BLOCK=0
 
