feat: update side chain env

--- a/.env.side-chain
+++ b/.env.side-chain
@@ -31,6 +31,9 @@ MAX_REQUESTS_PER_SECOND=50
 # GTX Anvil 2 (Side Chain - 31338)
 SIDE_DEVNET_ENDPOINT=https://side-devnet.gtxdex.xyz
 
+# GTX Core Chain (referenced for cross-chain operations)
+CORE_DEVNET_ENDPOINT=https://core-devnet.gtxdex.xyz
+
 # =============================================================================
 # CONTRACT ADDRESSES - SIDE CHAIN (GTX-ANVIL-2 - 31338) ONLY
 # =============================================================================
