--- a/.env.side-chain
+++ b/.env.side-chain
@@ -39,8 +39,7 @@ CORE_DEVNET_ENDPOINT=https://core-devnet.gtxdex.xyz
 # =============================================================================
 
 # Chain Balance Manager (Primary contract on side chain)
-CHAIN_BALANCE_MANAGER_GTX_SIDE_DEVNET_ADDRESS=0xcbEAF3BDe82155F56486Fb5a1072cb8baAf547cc
-CHAIN_BALANCE_MANAGER_IMPL_GTX_SIDE_DEVNET_ADDRESS=0xFD471836031dc5108809D173A067e8486B9047A3
+CHAIN_BALANCE_MANAGER_GTX_SIDE_DEVNET_ADDRESS=0x9E545E3C0baAB3E08CdfD552C960A1050f373042
 
 # Token Contracts (Side Chain)
 USDC_CONTRACT_GTX_SIDE_DEVNET_ADDRESS=0x8198f5d8F8CfFE8f9C413d98a0A55aEB8ab9FbB7
@@ -51,7 +50,10 @@ WETH_CONTRACT_GTX_SIDE_DEVNET_ADDRESS=0x0355B7B8cb128fA5692729Ab3AAa199C1753f726
 FAUCET_GTX_SIDE_DEVNET_ADDRESS=0x0E801D84Fa97b50751Dbf25036d067dCf18858bF
 
 # Hyperlane Mailbox (Side Chain)
-MAILBOX_GTX_SIDE_DEVNET_ADDRESS=0x8A791620dd6260079BF849Dc5567aDC3F2FdC318
+MAILBOX_GTX_SIDE_DEVNET_ADDRESS=0xc6e7DF5E7b4f2A278906862b61205850344D4e7d
+
+# Hyperlane Mailbox (Core Chain)
+MAILBOX_GTX_CORE_DEVNET_ADDRESS=0x5eb3Bc0a489C5A8288765d2336659EbCA68FCd00
 
 # =============================================================================
 # START BLOCKS - SIDE ANVIL NETWORK
