--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,6 +11,10 @@ http {
         server analytics-service:3001;
     }
 
+    upstream scalex_api_backend {
+        server scalex-api:3000;
+    }
+
     # Rate limiting
     limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=ws:10m rate=5r/s;
@@ -18,7 +22,7 @@ http {
     # WebSocket proxy
     server {
         listen 80;
-        server_name ws.gtx.local localhost;
+        server_name ws.scalex.local localhost;
 
         location /ws {
             limit_req zone=ws burst=20 nodelay;
@@ -45,10 +49,89 @@ http {
         }
     }
 
-    # Analytics API proxy
+    # GTX API proxy
     server {
         listen 80;
-        server_name api.gtx.local localhost;
+        server_name api.scalex.local localhost;
+
+        # Trading and market data endpoints
+        location /api/ {
+            limit_req zone=api burst=50 nodelay;
+            
+            proxy_pass http://scalex_api_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # CORS headers
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+            add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+            
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
+        }
+
+        # Trade-specific endpoints
+        location /trades/ {
+            limit_req zone=api burst=50 nodelay;
+            
+            proxy_pass http://scalex_api_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # CORS headers
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+            add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+            
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
+        }
+
+        # Faucet endpoints
+        location /faucet/ {
+            limit_req zone=api burst=10 nodelay;
+            
+            proxy_pass http://scalex_api_backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # CORS headers
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+            add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization";
+            
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
+        }
+
+        location /health/scalex-api {
+            proxy_pass http://scalex_api_backend/health;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # Optional: Serve static files for analytics dashboard
+        location / {
+            root /usr/share/nginx/html;
+            index index.html;
+            try_files $uri $uri/ /index.html;
+        }
+    }
+
+    # Analytics API proxy (renamed from original)
+    server {
+        listen 8080;
+        server_name analytics.scalex.local localhost;
 
         location /api/ {
             limit_req zone=api burst=50 nodelay;
@@ -73,13 +156,6 @@ http {
             proxy_pass http://analytics_backend/health;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-        }
-
-        # Optional: Serve static files for analytics dashboard
-        location / {
-            root /usr/share/nginx/html;
-            index index.html;
-            try_files $uri $uri/ /index.html;
         }
     }
 
